--- a/docker/landing/index.html
+++ b/docker/landing/index.html
@@ -1,25 +1,45 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Mardi DOIP Server</title>
-  <link rel="icon" href="/favicon.ico">
-  <style>
-    body { font-family: sans-serif; margin: 2rem; line-height: 1.5; }
-    code { background: #f5f5f5; padding: 0.15rem 0.3rem; border-radius: 4px; }
-    .card { max-width: 720px; border: 1px solid #e0e0e0; border-radius: 8px; padding: 1.5rem; box-shadow: 0 6px 20px rgba(0,0,0,0.08); }
-    h1 { margin-top: 0; }
-  </style>
-</head>
-<body>
-  <div class="card">
-    <h1>Mardi DOIP Server</h1>
-    <p>This service provides strict DOIP v2.0 endpoints for FAIR Digital Objects.</p>
-    <ul>
-      <li>DOIP TCP: <code>3567</code></li>
-      <li>Compat JSON/TCP: <code>3568</code></li>
-    </ul>
-    <p>Use a DOIP client (e.g., <code>StrictDOIPClient</code>) to interact with the service.</p>
-  </div>
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>MaRDI FDO Service</title>
+    <link rel="icon" href="/favicon.ico">
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: Arial, sans-serif;
+        color: #0b132b;
+        background: url('/background_mardi_api.png') no-repeat center center fixed;
+        background-size: cover;
+      }
+      .overlay {
+        background-color: rgba(255, 255, 255, 0.85);
+        max-width: 720px;
+        margin: 12vh auto;
+        padding: 32px 36px;
+        border-radius: 12px;
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+      }
+      a {
+        color: #1a73e8;
+        text-decoration: none;
+        font-weight: 600;
+      }
+      a:hover {
+        text-decoration: underline;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="overlay">
+      <p>Hello, this is the MaRDI DOIP server.</p>
+      <p>
+        It provides machine-actionable access to FAIR Digital Objects via the DOIP protocol.
+        This endpoint supports the core DOIP operations: hello, retrieve, and invoke.
+        So, it allows clients to check server status, resolve object metadata, stream object components,
+        and execute registered workflows such as equation extraction.
+        Use a DOIP-compatible client to interact with objects managed by this server on port 3567.
+      </p>
+    </div>
+  </body>
 </html>
