--- a/docker/landing/index.html
+++ b/docker/landing/index.html
@@ -38,8 +38,8 @@
         This endpoint supports the core DOIP operations: hello, retrieve, and invoke.
         So, it allows clients to check server status, resolve object metadata, stream object components,
         and execute registered workflows such as equation extraction.
-        Use a DOIP-compatible client to interact with objects managed by this server on port 3567, </br>
-        for example the <a href="https://github.com/MaRDI4NFDI/mardi_doip_server">MaRDI DOIP client</a>.
+        Use a DOIP-compatible client to interact with objects managed by this server on port 3567,
+        for example the <a href="https://mardi4nfdi.github.io/mardi_doip_server/client_cli/">MaRDI DOIP client CLI.</a>.
       </p>
     </div>
   </body>
