--- a/docker/landing/index.html
+++ b/docker/landing/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>MaRDI FDO Service</title>
+    <title>MaRDI DOIP Service</title>
     <link rel="icon" href="/favicon.ico">
     <style>
       body {
